--- a/index.html
+++ b/index.html
@@ -241,10 +241,10 @@
 
     <!-- Blog section  -->
 
-    <section class="mt-40 bg-secondary4" id="blog">
+    <section class="mt-40 " id="blog">
         <!-- <img src="img/Pattern 2.svg" alt=""> -->
 
-        <div class="container mx-auto">
+        <div class="container mx-auto bg-secondary4">
 
             <div class="grid grid-cols-2 items-center">
 
